My modified projects folder

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="hero">
         <div class="container hero-container">
             <div class="hero-content">
-                <h1 class="hero-title">Pope Lumar Maksym</h1>
+                <h1 class="hero-title">Ahura Pope Benedict </h1>
                 <h2 class="hero-subtitle">Web Developer & Data Analyst</h2>
                 <div class="hero-contact">
                     <div class="hero-contact-item">
@@ -79,7 +79,7 @@
                     <a href="https://linkedin.com/in/benedict-ahura" class="social-link" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="#" class="social-link" target="_blank">
+                    <a href="https://github.com/Popeaura" class="social-link" target="_blank">
                         <i class="fab fa-github"></i>
                     </a>
                     <a href="mailto:popeahura@gmail.com" class="social-link">
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="hero-img">
-                <img src="https://via.placeholder.com/250" alt="Pope Lumar Maksym" class="profile-img">
+                <img src="assets/pop-2.JPG" class="profile-img">
             </div>
         </div>
     </section>
