My modified projects folder

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="social-links">
-                    <a href="https://linkedin.com/in/benedict-ahura" class="social-link" target="_blank">
+                    <a href="https://www.linkedin.com/in/benedict-ahura-96a2712ba/" class="social-link" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a href="https://github.com/Popeaura" class="social-link" target="_blank">
