--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                         </div>
                         <div class="contact-text">
                             <h4>LinkedIn</h4>
-                            <a href="https://linkedin.com/in/benedict-ahura" target="_blank">Benedict Ahura</a>
+                            <a href="https://www.linkedin.com/in/benedict-ahura-96a2712ba/" target="_blank">Benedict Ahura</a>
                         </div>
                     </div>
                 </div>
