My modified projects folder

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <!-- Project 1 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <span>Creatives</span>
+                        <span>TeleMed </span>
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">TeleMed Platform</h3>
