My modified projects folder

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <!-- Project 2 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <span>TeleEducation Platform</span>
+                        <span>Creatives</span>
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">TeleEducation Platform</h3>
