My modified projects folder

--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@
                 <!-- Project 2 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <span>Creatives</span>
+                        <span>Business Consoultance</span>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">TeleEducation Platform</h3>
+                        <h3 class="project-title">Consult</h3>
                         <p class="project-description">
                             An online education platform for virtual learning with a focus on user interaction and accessibility.
                         </p>
