My modified projects folder

--- a/index.html
+++ b/index.html
@@ -302,10 +302,10 @@
                 <!-- Project 3 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <span>Healthcare Database</span>
+                        <span>Art Gallary </span>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Healthcare Database</h3>
+                        <h3 class="project-title">Art Gallary</h3>
                         <p class="project-description">
                             A database system for patient visits and provider workload analysis with data visualizations.
                         </p>
