My modified projects folder

--- a/index.html
+++ b/index.html
@@ -317,6 +317,26 @@
                         <a href="#" class="project-link">View Project</a>
                     </div>
                 </div>
+
+
+                <!-- Project 4 -->
+                <div class="project-card">
+                    <div class="project-img">
+                        <span>Art Gallary </span>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Art Gallary</h3>
+                        <p class="project-description">
+                            A database system for patient visits and provider workload analysis with data visualizations.
+                        </p>
+                        <div class="project-tags">
+                            <span class="project-tag">MySQL</span>
+                            <span class="project-tag">Google Sheets</span>
+                            <span class="project-tag">Data Analysis</span>
+                        </div>
+                        <a href="#" class="project-link">View Project</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
