My modified projects folder

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <!-- Project 4 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <span>Art Gallary </span>
+                        <span>Weather app</span>
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Art Gallary</h3>
