My modified projects folder

--- a/index.html
+++ b/index.html
@@ -325,6 +325,44 @@
                         <span>Weather app</span>
                     </div>
                     <div class="project-content">
+                        <h3 class="project-title">Weather App</h3>
+                        <p class="project-description">
+                            A database system for patient visits and provider workload analysis with data visualizations.
+                        </p>
+                        <div class="project-tags">
+                            <span class="project-tag">MySQL</span>
+                            <span class="project-tag">Google Sheets</span>
+                            <span class="project-tag">Data Analysis</span>
+                        </div>
+                        <a href="#" class="project-link">View Project</a>
+                    </div>
+                </div>
+
+                <!-- Project 5 -->
+                <div class="project-card">
+                    <div class="project-img">
+                        <span>Barber </span>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Barber</h3>
+                        <p class="project-description">
+                            A database system for patient visits and provider workload analysis with data visualizations.
+                        </p>
+                        <div class="project-tags">
+                            <span class="project-tag">MySQL</span>
+                            <span class="project-tag">Google Sheets</span>
+                            <span class="project-tag">Data Analysis</span>
+                        </div>
+                        <a href="#" class="project-link">View Project</a>
+                    </div>
+                </div>
+
+                <!-- Project 6 -->
+                <div class="project-card">
+                    <div class="project-img">
+                        <span>Art Gallary </span>
+                    </div>
+                    <div class="project-content">
                         <h3 class="project-title">Art Gallary</h3>
                         <p class="project-description">
                             A database system for patient visits and provider workload analysis with data visualizations.
