My modified projects folder

--- a/index.html
+++ b/index.html
@@ -360,10 +360,10 @@
                 <!-- Project 6 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <span>Art Gallary </span>
+                        <span>Clads </span>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Art Gallary</h3>
+                        <h3 class="project-title">Clads</h3>
                         <p class="project-description">
                             A database system for patient visits and provider workload analysis with data visualizations.
                         </p>
