--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
                             A database system for patient visits and provider workload analysis with data visualizations.
                         </p>
                         <div class="project-tags">
-                            <span class="project-tag">MySQL</span>
-                            <span class="project-tag">Google Sheets</span>
-                            <span class="project-tag">Data Analysis</span>
+                            <span class="project-tag">Html</span>
+                            <span class="project-tag">Css</span>
+                            <span class="project-tag">JavaScript</span>
                         </div>
                         <a href="#" class="project-link">View Project</a>
                     </div>
@@ -349,9 +349,8 @@
                             A database system for patient visits and provider workload analysis with data visualizations.
                         </p>
                         <div class="project-tags">
-                            <span class="project-tag">MySQL</span>
-                            <span class="project-tag">Google Sheets</span>
-                            <span class="project-tag">Data Analysis</span>
+                            <span class="project-tag">Html</span>
+                            <span class="project-tag">Css</span>
                         </div>
                         <a href="#" class="project-link">View Project</a>
                     </div>
@@ -368,9 +367,8 @@
                             A database system for patient visits and provider workload analysis with data visualizations.
                         </p>
                         <div class="project-tags">
-                            <span class="project-tag">MySQL</span>
-                            <span class="project-tag">Google Sheets</span>
-                            <span class="project-tag">Data Analysis</span>
+                            <span class="project-tag">Html</span>
+                            <span class="project-tag">css</span>
                         </div>
                         <a href="#" class="project-link">View Project</a>
                     </div>
