My modified projects folder

--- a/index.html
+++ b/index.html
@@ -293,7 +293,6 @@
                         <div class="project-tags">
                             <span class="project-tag">HTML/CSS</span>
                             <span class="project-tag">JavaScript</span>
-                            <span class="project-tag">Node.js</span>
                         </div>
                         <a href="#" class="project-link">View Project</a>
                     </div>
@@ -310,9 +309,8 @@
                             A database system for patient visits and provider workload analysis with data visualizations.
                         </p>
                         <div class="project-tags">
-                            <span class="project-tag">MySQL</span>
-                            <span class="project-tag">Google Sheets</span>
-                            <span class="project-tag">Data Analysis</span>
+                            <span class="project-tag">Html</span>
+                            <span class="project-tag">Css</span>
                         </div>
                         <a href="#" class="project-link">View Project</a>
                     </div>
@@ -368,7 +366,7 @@
                         </p>
                         <div class="project-tags">
                             <span class="project-tag">Html</span>
-                            <span class="project-tag">css</span>
+                            <span class="project-tag">Css</span>
                         </div>
                         <a href="#" class="project-link">View Project</a>
                     </div>
