--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                             <span class="project-tag">Css</span>
                             <span class="project-tag">JavaScript</span>
                         </div>
-                        <a href="#" class="project-link">View Project</a>
+                        <a href="https://popeaura.github.io/Weather-App/" class="project-link">View Project</a>
                     </div>
                 </div>
 
