My modified projects folder

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <!-- Project 1 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <span>TeleMed </span>
+                        <span><img src="" alt=""></span>
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">TeleMed Platform</h3>
@@ -332,7 +332,7 @@
                             <span class="project-tag">Css</span>
                             <span class="project-tag">JavaScript</span>
                         </div>
-                        <a href="https://popeaura.github.io/Weather-App/" class="project-link">View Project</a>
+                        <a href="" class="project-link">View Project</a>
                     </div>
                 </div>
 
